--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,24 +12,27 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '20.x'
   displayName: 'Install Node.js'
 
 - task: Npm@1
   inputs:
     command: 'install'
     workingDir: 'client'
-    
+  displayName: 'Install Client Node.js'
+
 - task: Npm@1
   inputs:
     command: 'install'
     workingDir: 'server'
-  
+  displayName: 'Install Server Node.js'
+
 - task: Npm@1
   inputs:
     command: 'custom'
     workingDir: 'client'
     customCommand: 'run build'
+  displayName: 'Run client'
 
 - task: CopyFiles@2
   inputs:
